universe-apps/base/documentdb-proxy/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: documentdb-proxy
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - documentdb-proxy.local
      secretName: documentdb-proxy-tls
  rules:
    - host: documentdb-proxy.local
      http:
        paths:
          - path: /
            backend:
              serviceName: documentdb-proxy
              servicePort: 27017
